--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,21 +3,21 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
+            android:id="@+id/nav_mywallet"
             android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
+            android:title="My Wallet" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_payment_request"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
+            android:title="Payment Request" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/nav_order"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
+            android:title="Order" />
         <item
-            android:id="@+id/nav_manage"
+            android:id="@+id/nav_profile"
             android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+            android:title="Profile" />
     </group>
 
     <item android:title="Communicate">
