--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-   <!-- <group android:checkableBehavior="single">
+    <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_mywallet"
             android:icon="@drawable/ic_menu_camera"
@@ -19,9 +19,9 @@
             android:icon="@drawable/ic_menu_manage"
             android:title="Profile" />
     </group>
--->
-    <!--<item android:title="Communicate">-->
-        <!--<menu>-->
+
+    <item android:title="Communicate">
+        <menu>
             <item
                 android:id="@+id/nav_share"
                 android:icon="@drawable/ic_menu_share"
@@ -34,7 +34,7 @@
                 android:id="@+id/nav_send"
                 android:icon="@drawable/ic_menu_send"
                 android:title="Send" />
-        <!--</menu>-->
-    <!--</item>-->
+        </menu>
+    </item>
 
 </menu>
