--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <group android:checkableBehavior="single">
         <item
@@ -25,9 +26,9 @@
             <item
                 android:id="@+id/nav_share"
                 android:icon="@drawable/ic_menu_share"
-                android:actionProviderClass=
-                    "android.widget.ShareActionProvider"
+                android:actionProviderClass="android.widget.ShareActionProvider"
                 android:title="Share" />
+            <!--app:actionProviderClass="android.support.v7.widget.ShareActionProvider"-->
             <!--android:showAsAction="always"-->
 
             <item
