login screen made

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,21 +32,22 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="80dp"
             android:layout_gravity="center"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="10dp"
             android:text="Welcome to the all new"
+            android:fontFamily="serif"
             android:textColor="#000"
-            android:textSize="15dp"
+            android:textSize="20dp"
             />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_gravity="center">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_margin="10dp"
                 android:layout_gravity="center"
-                android:layout_marginBottom="20dp"
                 android:text="XYZ"
                 android:textColor="#000"
                 android:textSize="30dp"
@@ -56,17 +57,22 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:layout_gravity="center"
-                android:layout_marginBottom="20dp"
-                android:text=" couriers"
-                android:textColor="#00e6e6"
+                android:layout_margin="10dp"
+                android:text="couriers"
+                android:textColor="#0059b3"
                 android:textSize="30dp"
                 android:fontFamily="serif"
                 />
         </LinearLayout>
 
-        <TextView
+        <ImageView
+            android:src="@drawable/flashscreen"
+            android:layout_marginTop="20dp"
+            android:layout_width="180dp"
+            android:layout_height="130dp"
+            android:layout_gravity="center"/>
+
+       <!-- <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
@@ -75,41 +81,51 @@
             android:text="LOGIN"
             android:textSize="20dp"
             android:textColor="#000"
-            />
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_margin="20dp"
-                android:text="user id: "/>
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:hint="some_username"
-                android:maxLength="20"
-                android:layout_margin="20dp"/>
-        </LinearLayout>
+            />-->
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <TextView
+                android:layout_marginTop="30dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_margin="20dp"
-                android:text="password: "/>
+                android:layout_margin="10dp"
+                android:text="user id:"
+                android:textSize="20dp"
+                android:textColor="#204060"/>
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="some_username"
+                android:maxLength="20"
+                android:layout_margin="10dp"
+                android:backgroundTint="#254d74"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="center">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="10dp"
+                android:text="password:"
+                android:textSize="20dp"
+                android:textColor="#204060"/>
             <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:hint="your password"
                 android:maxLength="20"
-                android:layout_margin="20dp"/>
+                android:layout_margin="10dp"
+                android:layout_marginBottom="0dp"
+                android:backgroundTint="#254d74"/>
         </LinearLayout>
 
         <TextView
@@ -118,20 +134,23 @@
             android:layout_gravity="right"
             android:text="@string/forgot_password"
             android:layout_marginRight="10dp"
-            android:textStyle="italic" />
+            android:textStyle="italic"
+            android:textColor="#2b5988"/>
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="SUBMIT"
-            android:layout_margin="50dp"/>
+            android:layout_margin="30dp"
+            android:background="#132639"
+            android:textColor="#fff"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_margin="30dp"
+            android:layout_margin="10dp"
             android:text="New User? SIGN UP"/>
     </LinearLayout>
 
